--- a/assignments/mp3-cps/mp3-cps.cabal
+++ b/assignments/mp3-cps/mp3-cps.cabal
@@ -38,6 +38,7 @@ test-suite mp3-cps-test
                      , QuickCheck
   other-modules:       Continuation
                      , Autograder
+                     , Tests
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
