--- a/assignments/mp4-scheme/mp4-scheme.cabal
+++ b/assignments/mp4-scheme/mp4-scheme.cabal
@@ -14,20 +14,17 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 executable scheme
-  hs-source-dirs:      app
-  main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  build-depends:       base
-                     , unordered-containers >= 0.2
-                     , parsec
-  default-language:    Haskell2010
+    hs-source-dirs:     app
+    main-is:            Main.hs
+    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
+    build-depends:      base , unordered-containers >= 0.2 , parsec
+    default-language:   Haskell2010
 
 test-suite test
-  type:                exitcode-stdio-1.0
-  hs-source-dirs:      app , test
-  main-is:             Spec.hs
-  build-depends:       base
-                     , unordered-containers >= 0.2
-                     , parsec
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  default-language:    Haskell2010
+    type:               exitcode-stdio-1.0
+    hs-source-dirs:     app , test
+    main-is:            Spec.hs
+    other-modules:      Main , Tests
+    build-depends:      base , unordered-containers >= 0.2 , parsec
+    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
+    default-language:   Haskell2010
